# sstring

./: CMakeLists.txt  sstring.pc.in
include/: sstring.h  sstring_private.h
src/: compare.c  concat.c  sstring.c
src/new/: copy.c  delete.c  new_from_cstring.c  new_string.c
src/substring/: from_index.c  substring.c  to_index.c  with_length.c
